--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Semantic Weaver",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "Weave semantic web ontologies, RDF-enhanced documentation, and knowledge graphs with CML, CMLD, Semantic Canvas Mode, and exports to MkDocs, GitHub Pages, or Solid Pods.",
+  "description": "Enhance Obsidian with RDF-based ontology management and documentation",
   "author": "Your Name",
   "isDesktopOnly": true
 }
