--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
   "description": "Enhance Obsidian with RDF-based ontology management and documentation",
-  "author": "Your Name",
+  "author": "Timothy Holborn",
   "isDesktopOnly": true
 }
