--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "semantic-weaver",
-  "version": "0.15.0",
-  "description": "Obsidian plugin for RDF-based ontology management and semantic documentation",
+  "version": "1.0.0",
+  "description": "Obsidian plugin for RDF-based ontology management, semantic canvas editing, SPARQL querying, and MkDocs export.",
   "main": "main.js",
   "scripts": {
-    "dev": "node esbuild.config.mjs",
-    "build": "node esbuild.config.mjs --production"
-  },
-  "keywords": ["obsidian", "rdf", "ontology", "semantic", "markdown"],
-  "author": "mediaprophet",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "esbuild": "^0.13.12",
-    "obsidian": "^1.8.7",
-    "typescript": "^4.4.4"
+    "build": "node esbuild.config.mjs",
+    "dev": "node esbuild.config.mjs --watch",
+    "build:markdown-ld": "cd libs/markdown-ld && npm install && npm run build"
   },
   "dependencies": {
     "n3": "^1.17.2",
     "cytoscape": "^3.30.2",
-    "markdown-ld": "^0.8.0",
-    "mermaid": "^10.9.1"
+    "mermaid": "^10.9.1",
+    "unified": "^11.0.4",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "@frogcat/ttl2jsonld": "^0.2.4",
+    "markdown-ld": "file:./libs/markdown-ld"
+  },
+  "devDependencies": {
+    "@types/mermaid": "^10.9.1",
+    "@types/node": "^20.14.12",
+    "esbuild": "^0.23.0",
+    "obsidian": "^1.6.7",
+    "typescript": "^5.5.4"
   }
 }
