--- a/package.json
+++ b/package.json
@@ -1,25 +1,51 @@
 {
-  "name": "semantic-weaver",
+  "name": "obsidian-semantic-weaver",
   "version": "1.0.0",
-  "description": "Obsidian plugin for RDF-based ontology management, semantic canvas editing, SPARQL querying, and MkDocs export.",
+  "description": "Obsidian plugin for managing RDF-based ontologies and annotating notes and canvases",
   "main": "main.js",
   "scripts": {
-    "build": "node esbuild.config.mjs",
-    "dev": "node esbuild.config.mjs --watch"
+    "dev": "node esbuild.config.mjs",
+    "build": "node esbuild.config.mjs production",
+    "test": "jest"
+  },
+  "keywords": ["obsidian", "plugin", "rdf", "ontology", "semantic-web"],
+  "author": "Timothy Holborn",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.14.2",
+    "@types/jest": "^29.5.12",
+    "esbuild": "^0.21.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.4.5",
+    "builtin-modules": "^3.3.0"
   },
   "dependencies": {
     "n3": "^1.17.2",
     "cytoscape": "^3.30.2",
+    "cytoscape-context-menus": "^4.2.0",
     "mermaid": "^10.9.1",
-    "unified": "^11.0.4",
-    "remark-parse": "^11.0.0",
-    "remark-stringify": "^11.0.0",
-    "@frogcat/ttl2jsonld": "^0.0.10"
+    "node-fetch": "^2.7.0",
+    "unified": "^10.1.2",
+    "remark-parse": "^10.0.2",
+    "remark-stringify": "^10.0.3",
+    "@rdfjs/serializer-jsonld": "2.0.0",
+    "@rdfjs/parser-n3": "2.0.0",
+    "rdf-store-dataset": "^1.0.0",
+    "3d-force-graph": "^1.73.2",
+    "three": "^0.167.1",
+    "d3-force-3d": "^3.0.3",
+    "lru-cache": "^10.0.0",
+    "glob": "^11.0.0",
+    "readable-stream": "^3.6.2"
   },
-  "devDependencies": {
-    "@types/node": "^20.14.12",
-    "esbuild": "^0.23.0",
-    "obsidian": "^1.6.7",
-    "typescript": "^5.5.4"
+  "overrides": {
+    "glob": "^11.0.0",
+    "readable-stream": "^3.6.2",
+    "@rdfjs/parser-n3": "2.0.0",
+    "@rdfjs/serializer-jsonld": "2.0.0",
+    "unified": "^10.1.2",
+    "remark-parse": "^10.0.2",
+    "remark-stringify": "^10.0.3"
   }
 }
